Fixes layout issues on showproduct modal
- hides field data and shows product information
- added .00 to prices
- adds font styles to text
- deletes product div that wasn't being used on the index.html

tri programmed with Andrew and Lauren

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -9,11 +9,20 @@ body {
 	float: left;
 	padding: 5%;
 }
+
 ul {
 	list-style-type: none;
 }
 
+.productWindow {
+  text-align: center;
+  background: white;
+}
 
+.products {
+  font-size: 2em;
+  font-weight: bolder;
+}
 #sign-out {
 	margin-top: 8px;
 }
